--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "tsc && node dist/index.js",
     "dev": "nodemon dist/index.js",
     "typescript": "tsc --w",
     "test": "echo \"Error: no test specified\" && exit 1"
