added deployed api url to env

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 # dev
-VITE_API_URL = http://localhost:4000
+# VITE_API_URL = http://localhost:4000
 # prod
-# VITE_API_URL = some aws url
+VITE_API_URL = http://ec2-44-202-254-127.compute-1.amazonaws.com:4000/
