--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node dist/index.js",
     "dev": "nodemon dist/index.js",
-    "typescript": "tsc --w",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "tscwatch": "tsc --w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
