post nginx api url

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,7 @@
 # dev
 # VITE_API_URL = http://localhost:4000
 # prod
-VITE_API_URL = http://ec2-54-144-246-113.compute-1.amazonaws.com:4000/api
+# BEFORE nginx
+# VITE_API_URL = http://ec2-54-144-246-113.compute-1.amazonaws.com:4000/api
+# AFTER nginx
+VITE_API_URL = http://ec2-52-90-42-99.compute-1.amazonaws.com/
