adjusted api url

--- a/frontend/.env
+++ b/frontend/.env
@@ -4,4 +4,4 @@
 # BEFORE nginx
 # VITE_API_URL = http://ec2-54-144-246-113.compute-1.amazonaws.com:4000/api
 # AFTER nginx
-VITE_API_URL = http://ec2-52-90-42-99.compute-1.amazonaws.com/
+VITE_API_URL = http://ec2-52-90-42-99.compute-1.amazonaws.com/api
