--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,15 +10,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup NodeJS
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: "18"
 
       - name: Install Dependencies
-        run: npm install
+        # run: npm install
+        # npm ci = clean install
+        run: npm ci
 
       - name: Build Frontend
         run: npm run build
