--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
     # The workflow should trigger only for changes in the "frontend" folder
-    paths:
-      - "frontend/**"
+    # paths:
+    #   - "frontend/**"
 
 jobs:
   build-and-deploy:
