--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,6 +12,10 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: ./frontend
+
     steps:
       - name: Checkout the Code
         uses: actions/checkout@v4
@@ -22,9 +26,7 @@ jobs:
           node-version: 18
 
       - name: Change to Frontend Directory & Install Dependencies
-        run: cd frontend && npm install
-        # npm ci = clean install
-        # run: cd frontend && npm ci
+        run: npm install
 
       - name: Build Frontend
         run: npm run build
