--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,10 +1,10 @@
-name: Build and Deploy
+name: Build and Deploy Frontend on S3
 
 on:
   push:
     branches:
       - main
-    # The workflow should trigger only for changes in the "frontend" folder
+    # The workflow should trigger only on changes in the "frontend" folder
     # paths:
     # - "frontend/**"
 
@@ -34,14 +34,14 @@ jobs:
       - name: Build Frontend
         run: npm run build
 
-      - name: Set AWS Credentials
+      - name: Set AWS S3 Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_S3 }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_S3 }}
           aws-region: us-east-1
 
-      - name: Delete /assets folder
+      - name: Delete /assets folder in AWS S3
         run: aws s3 rm s3://bazmurphy-cloud-tracker/assets/ --recursive
 
       - name: Sync to AWS S3
