--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -35,6 +35,6 @@ jobs:
       - name: Set AWS EC2 Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_EC2}}
-          aws-secret-access-key: ${{ secrets.AWS_EC2_ACCESS_KEY_EC2}}
-          aws-region: us-east1
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_EC2 }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_EC2 }}
+          aws-region: us-east-1
