--- a/backend/.env
+++ b/backend/.env
@@ -1,16 +1,5 @@
-# API PORT
-PORT=4000
-
-## DB Local Environment
-# DB_HOST = localhost
-# DB_PORT = 5432
-# DB_NAME = cloudtracker
-# DB_USER = postgres
-# DB_PASS = password
+# DB Local Environment
+# DB_CONNECTION_STRING=postgresql://postgres:password@localhost:5432/cloudtracker
 
 ## DB Hosted Environment
-DB_HOST=
-DB_PORT=
-DB_NAME= 
-DB_USER= 
-DB_PASS=
+# DB_CONNECTION_STRING=postgresql://user:pass@host:5432/cloudtracker
