--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -41,9 +41,12 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
+            pwd &&
             ls -la &&
             pm2 list | grep -q "cloudtrackerapi" && pm2 delete all || true &&
-            rm -r api/*
+            rm -rf api &&
+            mkdir api &&
+            ls -la
 
       - name: Check the contents of working directory (debug)
         run: ls -la
@@ -55,7 +58,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "backend/dist/*"
-          target: "/"
+          target: "api/"
 
       - name: SSH into EC2 > Start pm2 process (with injected db connection string)
         uses: appleboy/ssh-action@v1.0.0
@@ -64,7 +67,9 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
+            pwd &&
             ls -la &&
             cd api &&
+            pwd &&
             ls -la &&
             pm2 start index.js --name cloudtrackerapi --env DB_CONNECTION_STRING="${{ secrets.DB_CONNECTION_STRING }}"
