--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,5 +1,3 @@
-# edit to trigger deploy
-
 name: Build and Deploy Backend on EC2
 
 on:
@@ -34,22 +32,20 @@ jobs:
       - name: Build Backend
         run: npm run build
 
-      - name: SSH into EC2 > delete all pm2 processes > Clear api folder
+      - name: EC2 SSH > Delete the PM2 process > Delete the /cloudtracker/ folder
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            ls -la &&
             pm2 list | grep -q "cloudtrackerapi" && pm2 delete all || true &&
             rm -rf cloudtracker &&
-            ls -la
 
       # - name: Check the contents of working directory (debug)
       #   run: ls -la
 
-      - name: SCP dist to api folder
+      - name: EC2 SCP > Copy /backend/dist to /cloudtracker/backend/dist
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -58,14 +54,11 @@ jobs:
           source: "backend/dist/*"
           target: "cloudtracker/"
 
-      - name: SSH into EC2 > Start pm2 process (with injected db connection string)
+      - name: EC2 SSH > Start PM2 process (with injected db connection string)
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            ls -la &&
-            cd cloudtracker/backend/dist &&
-            ls -la &&
-            pm2 start index.js --name cloudtrackerapi --env DB_CONNECTION_STRING="${{ secrets.DB_CONNECTION_STRING }}"
+            pm2 start "cloudtracker/backend/dist/index.js" --name cloudtrackerapi --env DB_CONNECTION_STRING="${{ secrets.DB_CONNECTION_STRING }}"
