--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -40,7 +40,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             pm2 list | grep -q "cloudtrackerapi" && pm2 delete all || true &&
-            rm -rf cloudtracker &&
+            rm -rf cloudtracker
 
       # - name: Check the contents of working directory (debug)
       #   run: ls -la
