--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,6 @@
 # dev
-# VITE_API_URL = http://localhost:4000
+# VITE_API_URL = http://localhost:4000/api
+
 # prod
 # BEFORE nginx
 # VITE_API_URL = http://ec2-54-144-246-113.compute-1.amazonaws.com:4000/api
