--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-# DB Local Environment
+# Local Environment
 # DB_CONNECTION_STRING=postgresql://postgres:password@localhost:5432/cloudtracker
 
-## DB Hosted Environment
+# Hosted Environment
 # DB_CONNECTION_STRING=postgresql://user:pass@host:5432/cloudtracker
