--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon dist/index.js",
     "build": "tsc",
     "tscwatch": "tsc --w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -23,11 +23,20 @@
   "devDependencies": {
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/jest": "^29.5.5",
     "@types/morgan": "^1.9.6",
     "@types/node": "^20.7.1",
     "@types/pg": "^8.10.3",
+    "@types/supertest": "^2.0.14",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   }
 }
