--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon dist/index.js",
     "build": "tsc",
     "tscwatch": "tsc --w",
-    "test": "jest"
+    "test": "jest",
+    "seed": "node src/database/seed.js"
   },
   "keywords": [],
   "author": "",
