--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,11 @@
-# Local Environment
+# Local/Development/Testing
 # DB_CONNECTION_STRING=postgresql://postgres:password@localhost:5432/cloudtracker
 
-# Hosted Environment
+# Hosted
 # DB_CONNECTION_STRING=postgresql://user:pass@host:5432/cloudtracker
+
+# Local/Development/Testing
+# DB_SSL=false
+
+# Hosted
+# DB_SSL=true
