--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -102,4 +102,4 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            DB_CONNECTION_STRING="${{ secrets.DB_CONNECTION_STRING }}" DB_SSL="false" pm2 start "cloudtracker/backend/dist/index.js" --name cloudtrackerapi
+            DB_CONNECTION_STRING="${{ secrets.DB_CONNECTION_STRING }}" DB_SSL="true" pm2 start "cloudtracker/backend/dist/index.js" --name cloudtrackerapi
