updated api url

--- a/frontend/.env
+++ b/frontend/.env
@@ -3,6 +3,6 @@
 
 # prod
 # BEFORE nginx
-# VITE_API_URL = http://ec2-54-144-246-113.compute-1.amazonaws.com:4000/api
+VITE_API_URL = http://ec2-18-170-61-46.eu-west-2.compute.amazonaws.com:4000/api
 # AFTER nginx
-VITE_API_URL = http://ec2-52-90-42-99.compute-1.amazonaws.com/api
+# VITE_API_URL = http://ec2-18-170-61-46.eu-west-2.compute.amazonaws.com/api
