--- a/frontend/.env
+++ b/frontend/.env
@@ -1,8 +1,11 @@
-# dev
+# Local/Development
+
 # VITE_API_URL = http://localhost:4000/api
 
-# prod
+# Hosted
+
 # BEFORE nginx
 VITE_API_URL = http://ec2-18-170-61-46.eu-west-2.compute.amazonaws.com:4000/api
+
 # AFTER nginx
 # VITE_API_URL = http://ec2-18-170-61-46.eu-west-2.compute.amazonaws.com/api
