--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -72,6 +72,7 @@ jobs:
         # ssm requires a policy on the ec2 instance
         # make a Role with AmazonSSMManagedInstanceCore
         # go to the EC2 Instance, Actions, Security, Modify IAM Role and apply it
+        # test trigger
         run: |
           aws ssm send-command \
             --instance-ids ${{ secrets.INSTANCE_ID_EC2 }} \
