--- a/frontend/.env
+++ b/frontend/.env
@@ -5,7 +5,7 @@
 # Hosted
 
 # BEFORE nginx
-VITE_API_URL = http://ec2-18-170-61-46.eu-west-2.compute.amazonaws.com:4000/api
+# VITE_API_URL = http://ec2-18-170-61-46.eu-west-2.compute.amazonaws.com:4000/api
 
 # AFTER nginx
 # VITE_API_URL = http://ec2-18-170-61-46.eu-west-2.compute.amazonaws.com/api
