--- a/nginx.conf
+++ b/nginx.conf
@@ -3,18 +3,17 @@ events {
 }
 
 http {
-
   server {
     listen 80;
 
     location / {
-      root /usr/share/nginx/html;
-      try_files $uri /index.html;
+      root /usr/share/nginx/html/dist;
+      # try_files $uri /index.html;
+      index index.html;
     }
-
+    
     location /api/ {
       proxy_pass http://backend:4000;
     }
   }
-
 }
