--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,10 @@ services:
       - frontend-dist:/usr/share/nginx/html
     ports:
       - "80:80"
+
+# Define the Named Volume "frontend-dist"
+volumes:
+  frontend-dist:
 #
 #
 # Docker Compose Command to run everything (database, backend, frontend)
