--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ http {
     listen 80;
 
     location / {
-      root /usr/share/nginx/html/dist;
+      root /usr/share/nginx/html;
       # try_files $uri /index.html;
       index index.html;
     }
