--- a/nginx.conf
+++ b/nginx.conf
@@ -44,7 +44,7 @@ http {
         include /etc/nginx/default.d/*.conf;
 
         location /api/ {
-            proxy_pass http://localhost:4000;
+            proxy_pass http://backend:4000/api;
             # proxy_set_header Host $host;
             # proxy_set_header X-Real-IP $remote_addr;
             # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
