--- a/nginx.conf
+++ b/nginx.conf
@@ -43,9 +43,9 @@ http {
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
-        location /api/ {
-            proxy_pass http://backend:4000/api;
-            # proxy_set_header Host $host;
+        location ^~ /api/ {
+            proxy_pass http://ec2-13-40-185-17.eu-west-2.compute.amazonaws.com:4000/api;
+            proxy_set_header Host $host;
             # proxy_set_header X-Real-IP $remote_addr;
             # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
