--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@
 # DB_CONNECTION_STRING=postgresql://postgres:password@localhost:5432/cloudtracker
 
 # Hosted
-# DB_CONNECTION_STRING=postgresql://user:pass@host:5432/cloudtracker
+# DB_CONNECTION_STRING=postgresql://xxxxxx:xxxxxx@xxxxxx:5432/cloudtracker
 
 # Local/Development/Testing
 # DB_SSL=false
