--- a/frontend/.env
+++ b/frontend/.env
@@ -4,8 +4,14 @@
 
 # Hosted
 
+# S3 to EC2 SEPARATE API:
+
 # BEFORE nginx
 # VITE_API_URL = http://ec2-18-170-61-46.eu-west-2.compute.amazonaws.com:4000/
 
 # AFTER nginx
 # VITE_API_URL = http://ec2-18-170-61-46.eu-west-2.compute.amazonaws.com/
+
+
+# EC2 Docker Containers with Compose WITH nginx
+# VITE_API_URL = (not strictly neccessary)
