--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,7 +1,3 @@
-# For more information on configuration, see:
-#   * Official English Documentation: http://nginx.org/en/docs/
-#   * Official Russian Documentation: http://nginx.org/ru/docs/
-
 user nginx;
 worker_processes auto;
 error_log /var/log/nginx/error.log notice;
@@ -40,15 +36,19 @@ http {
         server_name  _;
         root         /usr/share/nginx/html;
 
-        # Load configuration files for the default server block.
-        include /etc/nginx/default.d/*.conf;
-
-        location ^~ /api/ {
-            proxy_pass http://backend/api;
-            proxy_set_header Host $host;
+        # we define a route /api and then point it to the backend docker container
+        # reverse proxying
+        location /api {
+            # we use the docker container_name and the exposed port
+            proxy_pass http://backend:4000; 
+            proxy_set_header Host $http_host;
+            proxy_http_version 1.1;
             # proxy_set_header X-Real-IP $remote_addr;
             # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
+
+        # Load configuration files for the default server block.
+        include /etc/nginx/default.d/*.conf;
 
         error_page 404 /404.html;
         location = /404.html {
@@ -58,32 +58,4 @@ http {
         location = /50x.html {
         }
     }
-
-# Settings for a TLS enabled server.
-#
-#    server {
-#        listen       443 ssl http2;
-#        listen       [::]:443 ssl http2;
-#        server_name  _;
-#        root         /usr/share/nginx/html;
-#
-#        ssl_certificate "/etc/pki/nginx/server.crt";
-#        ssl_certificate_key "/etc/pki/nginx/private/server.key";
-#        ssl_session_cache shared:SSL:1m;
-#        ssl_session_timeout  10m;
-#        ssl_ciphers PROFILE=SYSTEM;
-#        ssl_prefer_server_ciphers on;
-#
-#        # Load configuration files for the default server block.
-#        include /etc/nginx/default.d/*.conf;
-#
-#        error_page 404 /404.html;
-#        location = /404.html {
-#        }
-#
-#        error_page 500 502 503 504 /50x.html;
-#        location = /50x.html {
-#        }
-#    }
-
 }
